--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "mews/captcha": "^3.3"
     },
     "require-dev": {
+        "doctrine/dbal": "^3.8",
         "fakerphp/faker": "^1.9.1",
+        "laravel/dusk": "^8.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
